# rtems

cpukit/sapi/include/: confdefs.h
cpukit/score/: Makefile.am
cpukit/score/include/rtems/score/: schedulerglobaledf.h
cpukit/score/src/: schedulerglobaledf.c
doc/user/: schedule.t
testsuites/smptests/smpedf/: Makefile.am  init.c  init.c~
testsuites/smptests/smpedf01/: Makefile.am  init.c  system.h
